[package]
name = "esc"
version = "0.1.0"
edition = "2021"
authors = ["p4thie <pathiestic@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "twitter.com/p4thie"
description = "an easy sidechain ducker"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

atomic_float = "0.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
